--- a/src/components/Burger/BuildControls/BuildControls.module.css
+++ b/src/components/Burger/BuildControls/BuildControls.module.css
@@ -1,3 +1,6 @@
+
+
+
 .BuildControls {
     width: 100%;
     background-color: #cf8f2e;
@@ -5,7 +8,7 @@
     flex-flow: column;
     align-items: center;
     box-shadow: 0 2px 1px #ccc;
-    margin: auto;
+    margin-top: 222px;
     padding: 10px 0;
 }
 
@@ -48,5 +51,11 @@
     }
     100% {
         transform: scale(1);
+    }
+}
+
+@media (max-width: 402px) {
+    .BuildControls {
+        margin-top: 0;
     }
 }
