--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -15,9 +15,15 @@
     }
 }
 
-@media(min-width: 500px) and (min-height: 401px) {
+@media(min-width: 402px) and (min-height: 401px) {
     .Burger {
         width: 450px;
         height: 400px;
+    }
+}
+@media (min-width: 500px) and (min-height: 400px) {
+    .Burger {
+        width: 350px;
+        height: 300px;
     }
 }
