--- a/src/components/Navigation/Toolbar/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/src/components/Navigation/Toolbar/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -7,8 +7,9 @@
     
 }
 
+
 .NavigationItem a {
-    color: #8f5c2c;
+    color: #8F5C2C;
     text-decoration: none;
     width: 100%;
     box-sizing: border-box;
@@ -20,10 +21,11 @@
 .NavigationItem a:hover,
 .NavigationItem a:active,
 .NavigationItem a.active {
-    color: #40a4c8;
+    color: #40A4C8;
+    
 }
 
-@media(min-with: 500px) {
+@media(min-width: 500px) {
     .NavigationItem {
         margin: 0;
         display: flex;
@@ -38,7 +40,7 @@
         color: white;
         height: 100%;
         padding: 16px 10px;
-        border-bottom: 4x solid transparent;
+        border-bottom: 4px solid transparent;
 
     
     }
@@ -47,8 +49,8 @@
     .NavigationItem a:hover,
     .NavigationItem a:active,
     .NavigationItem a.active {
-        background-color: #8f5c2c;
-        border-bottom: 4px solid #40a4c8;
+        background-color: #8F5C2C;
+        border-bottom: 4px solid #40A4C8;
         color: white;
     }
 }
