--- a/src/components/Burger/Burger.module.css
+++ b/src/components/Burger/Burger.module.css
@@ -8,6 +8,10 @@
     font-size: 1.2rem;
 }
 
+.AddIngsText {
+    color: rgb(99, 60, 60);
+}
+
 @media(min-width: 1000px) and (min-height: 700px) {
     .Burger {
         width: 700px;
