--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,13 @@
+
+
 body {
   margin: 0;
   padding: 0;
   font-family: "Open Sans",sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+
 }
 
 code {
