--- a/client/src/components/Burger/BuildControls/BuildControls.module.css
+++ b/client/src/components/Burger/BuildControls/BuildControls.module.css
@@ -2,13 +2,13 @@
 
 
 .BuildControls {
-    width: 100%;
+    width: 70%;
     background-color: #cf8f2e;
     display: flex;
     flex-flow: column;
     align-items: center;
     box-shadow: 0 2px 1px #ccc;
-    margin-top: 170px;
+    /* margin-top: 170px; */
     padding: 10px 0;
 }
 
