--- a/client/src/components/Burger/Burger.module.css
+++ b/client/src/components/Burger/Burger.module.css
@@ -1,7 +1,7 @@
 .Burger {
-    width: 70%;
-    margin: auto;
-    height: 115px;
+    width: 30%;
+    /* margin: auto; */
+    height: 100%;
     overflow-y: scroll;
     text-align: center;
     font-weight: bold;
@@ -15,20 +15,20 @@
 
 @media(min-width: 1000px) and (min-height: 700px) {
     .Burger {
-        width: 700px;
-        height: 600px;
+        /* width: 700px; */
+        /* height: 600px; */
     }
 }
 
 @media(min-width: 402px) and (min-height: 401px) {
     .Burger {
-        width: 450px;
-        height: 400px;
+        /* width: 450px; */
+        /* height: 400px; */
     }
 }
 @media (min-width: 500px) and (min-height: 400px) {
     .Burger {
-        width: 350px;
-        height: 300px;
+        /* width: 350px;
+        height: 300px; */
     }
 }
