--- a/client/src/components/Burger/BurgerIngredient/BurgerIngredient.module.css
+++ b/client/src/components/Burger/BurgerIngredient/BurgerIngredient.module.css
@@ -1,6 +1,6 @@
 .BreadBottom {
-  height: 25%;
-  width: 80%;
+  height: 10%;
+  width: 60%;
   /* background: linear-gradient(#F08E4A, #e27b36); */
   border-radius: 0 0 30px 30px;
   /* box-shadow: inset -15px 0 #c15711; */
@@ -11,8 +11,8 @@
 }
 
 .BreadTop {
-  height: 25%;
-  width: 80%;
+  height: 10%;
+  width: 60%;
   /* background: linear-gradient(#bc581e, #e27b36); */
   background-image: url("../../../assets/images/top-bread.png");
   background-repeat: no-repeat;
@@ -26,8 +26,8 @@
 
 
 .Meat {
-  width: 80%;
-  height: 15%;
+  height: 10%;
+  width: 60%;
   /* background: linear-gradient(#7f3608, #702e05); */
   background-image: url("../../../assets/images/meat.png");
   background-repeat: no-repeat;
@@ -37,8 +37,8 @@
 }
 
 .Cheese {
-  width: 90%;
   height: 10%;
+  width: 60%;
   margin: 2% auto;
   /* background: linear-gradient(#f4d004, #d6bb22); */
   background-image: url("../../../assets/images/cheese.png");
@@ -47,24 +47,10 @@
   border-radius: 20px;
 }
 
-.Salad {
-  width: 85%;
-  height: 7%;
-  margin: 2% auto;
-  background: linear-gradient(#228c1d, #91ce50);
-  border-radius: 20px;
-}
-
-.Bacon {
-  width: 80%;
-  height: 3%;
-  background: linear-gradient(#bf3813, #c45e38);
-  margin: 2% auto;
-}
 
 .Onion {
-  width: 90%;
-  height: 15%;
+  height: 10%;
+  width: 60%;
   margin: 2% auto;
   /* background: linear-gradient(#f5e55b, #a5a5a5); */
   background-image: url("../../../assets/images/onion.png");
@@ -72,3 +58,58 @@
   background-size: 100% 100%;
   border-radius: 20px;
 }
+
+.Cucumber {
+  height: 10%;
+  width: 60%;
+  margin: 2% auto;
+  /* background: linear-gradient(#f5e55b, #a5a5a5); */
+  background-image: url("../../../assets/images/cucumber.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  border-radius: 20px;
+}
+
+.Lettuce {
+  height: 10%;
+  width: 60%;
+  margin: 2% auto;
+  /* background: linear-gradient(#f5e55b, #a5a5a5); */
+  background-image: url("../../../assets/images/lettuce.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  border-radius: 20px;
+}
+
+.Mayo {
+  height: 10%;
+  width: 60%;
+  margin: 2% auto;
+  /* background: linear-gradient(#f5e55b, #a5a5a5); */
+  background-image: url("../../../assets/images/mayo.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  border-radius: 20px;
+}
+
+.Cucumber {
+  height: 10%;
+  width: 60%;
+  margin: 2% auto;
+  /* background: linear-gradient(#f5e55b, #a5a5a5); */
+  background-image: url("../../../assets/images/cucumber.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  border-radius: 20px;
+}
+.Tomato {
+  height: 10%;
+  width: 60%;
+  margin: 2% auto;
+  /* background: linear-gradient(#f5e55b, #a5a5a5); */
+  background-image: url("../../../assets/images/tomato.png");
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  border-radius: 20px;
+}
+
