--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,7 @@
 
 
 body {
+  height: 100%;
   margin: 0;
   padding: 0;
   font-family: "Open Sans",sans-serif;
@@ -8,7 +9,13 @@ body {
   -moz-osx-font-smoothing: grayscale;
 
 }
+html {
+  height: 100%;
+}
 
+#root {
+  height: inherit;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
