--- a/client/src/components/Logo/Logo.module.css
+++ b/client/src/components/Logo/Logo.module.css
@@ -1,9 +1,9 @@
 .Logo {
-    background-color: white;
-    padding: 8px;
+    /* background-color: white; */
+    /* padding: 8px; */
     height: 100%;
     box-sizing: border-box;
-    border-radius: 5px;
+    /* border-radius: 5px; */
 }
 
 .Logo img {
