--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,6 +15,7 @@ html {
 
 #root {
   height: inherit;
+  background: linear-gradient(79deg, rgba(0,0,0,1) 35%, rgba(0,0,0,1) 35.2%, rgba(255,164,0,1) 35.3%);
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
