--- a/client/src/hoc/Layout/Layout.module.css
+++ b/client/src/hoc/Layout/Layout.module.css
@@ -2,7 +2,7 @@
     /* margin-top: 72px; */
     display: flex;
     height: 95%;
-    background: linear-gradient(74deg, rgb(0, 0, 0) 37%, rgb(252, 159, 0) 29%);
+    /* background: linear-gradient(74deg, rgb(0, 0, 0) 37%, rgb(252, 159, 0) 29%); */
 }
 
 
