--- a/client/src/components/Navigation/Toolbar/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/client/src/components/Navigation/Toolbar/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -9,7 +9,7 @@
 
 
 .NavigationItem a {
-    color: #8F5C2C;
+    /* color: #8F5C2C; */
     text-decoration: none;
     width: 100%;
     box-sizing: border-box;
@@ -21,7 +21,8 @@
 .NavigationItem a:hover,
 .NavigationItem a:active,
 .NavigationItem a.active {
-    color: #40A4C8;
+    /* color: #40A4C8; */
+    
     
 }
 
@@ -31,17 +32,22 @@
         display: flex;
         height: 100%;
         align-items: center;
-        width: auto;
-    
+        /* padding-left: 5px; */
+        width: 100px;
+        justify-content: flex-end;
+        
         
     }
     
     .NavigationItem a {
-        color: white;
+        /* color: white; */
+        color: black;
         height: 100%;
-        padding: 16px 10px;
+        /* padding: 16px 10px; */
         border-bottom: 4px solid transparent;
-
+        transition: all 0.2s linear;
+        text-align: center;
+        height: auto;
     
     }
     
@@ -49,8 +55,11 @@
     .NavigationItem a:hover,
     .NavigationItem a:active,
     .NavigationItem a.active {
-        background-color: #8F5C2C;
-        border-bottom: 4px solid #40A4C8;
-        color: white;
+        /* background-color: #8F5C2C;
+        border-bottom: 4px solid #40A4C8; */
+        color: black;
+        font-size: large;
+        font-weight: bold;
+        transition: all 0.2s linear;
     }
 }
