--- a/client/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/client/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -5,7 +5,7 @@
     top: 0;
     left: 0;
     /* background-color: #703b09; */
-    background: linear-gradient(79deg, rgba(255,164,0,1) 0%, rgba(255,164,0,1) 12%, rgba(80,57,0,1) 28%, rgba(0,0,0,1) 44%);
+    /* background: linear-gradient(79deg, rgba(255,164,0,1) 0%, rgba(255,164,0,1) 12%, rgba(80,57,0,1) 28%, rgba(0,0,0,1) 44%); */
     display: flex;
     justify-content: space-between;
     align-items: center;
