--- a/client/src/components/Navigation/Toolbar/Toolbar.module.css
+++ b/client/src/components/Navigation/Toolbar/Toolbar.module.css
@@ -12,6 +12,7 @@
     padding: 0 20px;
     box-sizing: border-box;
     z-index: 90;
+    background: linear-gradient(180deg, rgba(0,0,0,0.30994404597776615) 0%, rgba(0,0,0,0.14467793953518904) 25%, rgba(0,0,0,0) 100%);
 }
 
 .Toolbar nav {
