--- a/client/src/components/Burger/Burger.module.css
+++ b/client/src/components/Burger/Burger.module.css
@@ -1,5 +1,5 @@
 .Burger {
-    width: 30%;
+    width: 450px;
     /* margin: auto; */
     height: 100%;
     overflow-y: scroll;
@@ -7,6 +7,7 @@
     font-weight: bold;
     font-size: 1.2rem;
     direction: rtl;
+    transition: all 0.2s linear;
 }
 
 .AddIngsText {
