--- a/client/src/components/Burger/Burger.module.css
+++ b/client/src/components/Burger/Burger.module.css
@@ -1,7 +1,7 @@
 .Burger {
     width: 450px;
     /* margin: auto; */
-    height: 100%;
+    /* height: 100%; */
     overflow-y: scroll;
     text-align: center;
     font-weight: bold;
