--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,6 @@
+@font-face {
+  font-family: 'ChakraPetch-SemiBold';
+  src: local('ChakraPetch-SemiBold'), url(./assets/fonts/ChakraPetch-SemiBold.ttf) format('truetype');}
 
 body {
   height: 100%;
