--- a/client/src/components/Burger/BurgerIngredient/BurgerIngredient.module.css
+++ b/client/src/components/Burger/BurgerIngredient/BurgerIngredient.module.css
@@ -1,126 +1,93 @@
-.BreadBottom {
-  height: 10%;
-  width: 60%;
+.Tomato,
+.Cucumber,
+.Mayo,
+.Lettuce,
+.Onion,
+.Cheese,
+.Meat,
+.BreadBottom,
+.BreadTop {
+  min-height: 100px;
+  height: 100px;
+  width: 350px;
   /* background: linear-gradient(#F08E4A, #e27b36); */
   border-radius: 0 0 30px 30px;
   /* box-shadow: inset -15px 0 #c15711; */
   margin: 2% auto;
-  background-image: url("../../../assets/images/bottom-bread.png");
   background-repeat: no-repeat;
   background-size: 100% 100%;
+  transition: all 0.2s linear;
+}
+
+.BreadBottom {
+  background-image: url("../../../assets/images/bottom-bread.png");
 }
 
 .BreadTop {
-  height: 10%;
-  width: 60%;
-  /* background: linear-gradient(#bc581e, #e27b36); */
   background-image: url("../../../assets/images/top-bread.png");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-
-  border-radius: 50% 50% 0 0;
-  /* box-shadow: inset -15px 0 #c15711; */
-  margin: 2% auto;
-  position: relative;
 }
 
-
 .Meat {
-  height: 10%;
-  width: 60%;
-  /* background: linear-gradient(#7f3608, #702e05); */
   background-image: url("../../../assets/images/meat.png");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  margin: 2% auto;
-  border-radius: 15px;
 }
 
 .Cheese {
-  height: 10%;
-  width: 60%;
-  margin: 2% auto;
-  /* background: linear-gradient(#f4d004, #d6bb22); */
   background-image: url("../../../assets/images/cheese.png");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  border-radius: 20px;
 }
 
-
 .Onion {
-  height: 10%;
-  width: 60%;
-  margin: 2% auto;
-  /* background: linear-gradient(#f5e55b, #a5a5a5); */
   background-image: url("../../../assets/images/onion.png");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  border-radius: 20px;
 }
 
 .Cucumber {
-  height: 10%;
-  width: 60%;
-  margin: 2% auto;
-  /* background: linear-gradient(#f5e55b, #a5a5a5); */
   background-image: url("../../../assets/images/cucumber.png");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  border-radius: 20px;
 }
 
 .Lettuce {
-  height: 10%;
-  width: 60%;
-  margin: 2% auto;
-  /* background: linear-gradient(#f5e55b, #a5a5a5); */
   background-image: url("../../../assets/images/lettuce.png");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  border-radius: 20px;
 }
 
 .Mayo {
-  height: 10%;
-  width: 60%;
-  margin: 2% auto;
-  /* background: linear-gradient(#f5e55b, #a5a5a5); */
   background-image: url("../../../assets/images/mayo.png");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  border-radius: 20px;
 }
 
 .Cucumber {
-  height: 10%;
-  width: 60%;
-  margin: 2% auto;
-  /* background: linear-gradient(#f5e55b, #a5a5a5); */
   background-image: url("../../../assets/images/cucumber.png");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  border-radius: 20px;
 }
 .Tomato {
-  height: 10%;
-  width: 60%;
-  margin: 2% auto;
-  /* background: linear-gradient(#f5e55b, #a5a5a5); */
   background-image: url("../../../assets/images/tomato.png");
-  background-repeat: no-repeat;
-  background-size: 100% 100%;
-  border-radius: 20px;
 }
 
-@media(max-width: 1300px) {
-  .Tomato, .Cucumber, .Mayo, .Lettuce, .Onion, .Cheese, .Meat, .BreadBottom, .BreadTop {
-    height: 7%;
+@media (max-width: 1300px) {
+  .Tomato,
+  .Cucumber,
+  .Mayo,
+  .Lettuce,
+  .Onion,
+  .Cheese,
+  .Meat,
+  .BreadBottom,
+  .BreadTop {
+    height: 60px;
+    width: 80px;
+    min-height: 60px;
   }
 }
 
-@media(max-width: 1000px) {
-  .Tomato, .Cucumber, .Mayo, .Lettuce, .Onion, .Cheese, .Meat, .BreadBottom, .BreadTop {
-    height: 5%;
+
+@media (max-width: 1400px) {
+  .Tomato,
+  .Cucumber,
+  .Mayo,
+  .Lettuce,
+  .Onion,
+  .Cheese,
+  .Meat,
+  .BreadBottom,
+  .BreadTop {
+    height: 80px;
+    min-height: 80px;
+    width: 300px;
+    transition: all 0.2s linear;
   }
 }
