--- a/client/src/components/Burger/BuildControls/BuildControl/BuildControl.module.css
+++ b/client/src/components/Burger/BuildControls/BuildControl/BuildControl.module.css
@@ -9,12 +9,14 @@
 .BuildControl button {
   display: block;
   font: inherit;
-  padding: 5px;
+
   margin: 0 5px;
-  width: 80px;
+  width: 40px;
+  height: 40px;
   border: 1px solid #aa6817;
   cursor: pointer;
   outline: none;
+  border-radius: 50%;
 }
 
 .BuildControl button:disabled {
