--- a/client/src/components/Burger/BuildControls/BuildControls.module.css
+++ b/client/src/components/Burger/BuildControls/BuildControls.module.css
@@ -24,6 +24,7 @@
     font-size: 1.2em;
     padding: 15px 30px;
     box-shadow: 2px 2px 2px #966909;
+    width: 200px;
 }
 
 .OrderButton:hover, .OrderButton:active {
