add HomeButton title

--- a/client/src/components/UI/Button/HomeButton.module.css
+++ b/client/src/components/UI/Button/HomeButton.module.css
@@ -30,7 +30,7 @@
   );
 }
 .HomeButtonDisabled {
-  background: chartreuse;
+  /* background: chartreuse;*/
   cursor: not-allowed;
 }
 .HomeButton:hover {
