--- a/client/src/components/Burger/BuildControls/BuildControl/BuildControl.module.css
+++ b/client/src/components/Burger/BuildControls/BuildControl/BuildControl.module.css
@@ -4,6 +4,7 @@
   align-items: center;
   margin: 5px 0;
   /* width: 60%; */
+  text-align: center;
 }
 
 .BuildControl button {
@@ -17,6 +18,7 @@
   cursor: pointer;
   outline: none;
   border-radius: 50%;
+  
 }
 
 .BuildControl button:disabled {
@@ -36,7 +38,6 @@
   padding: 10px;
   font-weight: bold;
   width: 80px;
-  text-align: centergit;
 }
 
 .BuildControl .Less {
