--- a/client/src/components/Order/CheckoutSummary/CheckoutSummary.module.css
+++ b/client/src/components/Order/CheckoutSummary/CheckoutSummary.module.css
@@ -1,11 +1,7 @@
 .CheckoutSummary {
-    text-align: center;
-    width: 80%;
-    margin: auto;
+  text-align: center;
+  width: 100%;
+  /* margin: auto; */
+  display: flex;
 }
 
-/* @media (min-width: 600px) {
-    .CheckoutSummary {
-        width: 500px;
-    }
-} */
