--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,24 +1,34 @@
 @font-face {
-  font-family: 'ChakraPetch-SemiBold';
-  src: local('ChakraPetch-SemiBold'), url(./assets/fonts/ChakraPetch-SemiBold.ttf) format('truetype');}
+  font-family: "ChakraPetch-SemiBold";
+  src: local("ChakraPetch-SemiBold"),
+    url(./assets/fonts/ChakraPetch-SemiBold.ttf) format("truetype");
+}
 
+@font-face {
+  font-family: "DancingScript-VariableFont_wght";
+  src: local("DancingScript-VariableFont_wght"),
+    url(./assets/fonts/DancingScript-VariableFont_wght.ttf) format("truetype");
+}
 body {
   height: 100%;
   margin: 0;
   padding: 0;
-  font-family: "Open Sans",sans-serif;
+  font-family: "Open Sans", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-
 }
 html {
   height: 100%;
- 
 }
 
 #root {
   height: inherit;
-  background: linear-gradient(79deg, rgba(0,0,0,1) 40%, rgba(0,0,0,1) 35.2%, rgba(255,164,0,1) 35.3%);
+  background: linear-gradient(
+    79deg,
+    rgba(0, 0, 0, 1) 40%,
+    rgba(0, 0, 0, 1) 35.2%,
+    rgba(255, 164, 0, 1) 35.3%
+  );
 }
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
