add prices column

--- a/client/src/components/Order/CheckoutForm/CheckoutForm.module.css
+++ b/client/src/components/Order/CheckoutForm/CheckoutForm.module.css
@@ -19,7 +19,7 @@
   background-color: tomato;
   width: 80%;
 }
-.CheckoutForm .RightColumn {
+.CheckoutForm .CenterColumn {
   background-color: teal;
   width: 20%;
 }
