--- a/client/src/components/Navigation/Toolbar/SideDrawer/SideDrawer.module.css
+++ b/client/src/components/Navigation/Toolbar/SideDrawer/SideDrawer.module.css
@@ -6,10 +6,12 @@
     left: 0;
     top: 0;
     z-index: 200;
-    background-color: white;
+    background-color: #000;
     padding: 32px 16px;
     box-sizing: border-box;
     transition: transform 0.3s ease-out;
+    display: flex;
+    flex-direction: column;
 }
 
 @media (min-width: 500px) {
@@ -27,7 +29,10 @@
 }
 
 .Logo {
-    height: 11%;
+    height: 20%;
+    /* margin-left: auto; */
     margin-bottom: 32px;
+    width: 100%;
+    text-align: center;
 }
 
