fix SideDrawer navs colors

--- a/client/src/components/Navigation/Toolbar/SideDrawer/SideDrawer.module.css
+++ b/client/src/components/Navigation/Toolbar/SideDrawer/SideDrawer.module.css
@@ -35,4 +35,11 @@
     width: 100%;
     text-align: center;
 }
+.SideDrawer a,
+.SideDrawer a:visited,
+.SideDrawer a:active
+{
+    color:#ff7000;
+}
+
 
