--- a/client/src/components/UI/Button/HomeButton.module.css
+++ b/client/src/components/UI/Button/HomeButton.module.css
@@ -19,8 +19,8 @@
   /* text-shadow: 0px 0px 10px rgba(0,0,0,0.2);*/
   box-shadow: 0 0 10px #0303034f;
   border-radius: 10px;
-  height: 70px;
-  width: 200px;
+  height: 5rem;
+  width: 10rem;
   text-decoration: none;
   background-image: linear-gradient(
     to right,
@@ -38,5 +38,10 @@
   font-weight: 600;
   transition: all 0.3s linear;
   background-position: right center; /* change the direction of the change here */
+}
+
+@media(max-width: 490px) {
+  .HomeButton {
+  }
 }
 
