--- a/client/src/components/Navigation/Toolbar/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/client/src/components/Navigation/Toolbar/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -4,6 +4,7 @@
     display: block;
     width: 100%;
     font-family: 'ChakraPetch-SemiBold';
+
 }
 
 
@@ -18,11 +19,8 @@
 }
 
 
-.NavigationItem a:hover,
-.NavigationItem a:active,
-.NavigationItem a.active {
+.NavigationItem :active {
     /* color: inherit; */
-    
     
 }
 
@@ -48,19 +46,26 @@
         transition: all 0.2s linear;
         text-align: center;
         height: auto;
+        border-bottom: 4px transparent solid;
+
     
     }
     
     
-    .NavigationItem a:hover,
+    .NavigationItem a:hover {
+        font-size: large;
+
+    }
+
     .NavigationItem a:active,
     .NavigationItem a.active {
         /* background-color: #8F5C2C;
         border-bottom: 4px solid #40A4C8; */
         color: black;
-        font-size: large;
         font-weight: bold;
+        font-size: large;
         transition: all 0.2s linear;
+        border-bottom: 4px rgba(0, 0, 0) solid;
     }
 
     
