--- a/client/src/components/UI/Button/Button.module.css
+++ b/client/src/components/UI/Button/Button.module.css
@@ -10,7 +10,7 @@
     font-weight: bold;
     border-radius: 12px;
     text-align: center;
-    transition: all 0.3s ease-in;
+    transition: all 0.1s linear;
     font-family: 'ChakraPetch-SemiBold';
     
 }
