--- a/client/src/components/UI/Input/Input.module.css
+++ b/client/src/components/UI/Input/Input.module.css
@@ -1,14 +1,26 @@
 .Input {
     width: 100%;
-    padding: 10px;
+    /* padding: 10px; */
     box-sizing: border-box;
+    height: 70px;
+    /* position: relative; */
 }
 
 .Label {
-    font-weight: bold;
     display: block;
     margin-bottom: 8px;
+    position: relative;
+    top: 0;
+    left: 0;
+    text-align: left;
+    padding-left: 10px;
+    font-size: 0.8rem;
+    font-style: italic;
+    font-family: 'ChakraPetch-SemiBold';
+    text-transform: uppercase;
 }
+
+
 
 .InputElement {
     outline: none;
