--- a/client/src/containers/Auth/Auth.module.css
+++ b/client/src/containers/Auth/Auth.module.css
@@ -1,9 +1,10 @@
 .Auth {
-    margin: 20px auto;
+    margin: 100px auto;
     width: 80%;
     height: 400px;
     text-align: center;
-    box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
+    box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24),
+        0 17px 50px 0 rgba(0, 0, 0, 0.19);
     /* background: rgba(253, 253, 253, 0.973); */
     padding: 10px;
     box-sizing: border-box;
@@ -12,15 +13,14 @@
     position: relative;
     z-index: 1;
     padding: 20px 60px;
-    background: url('../../assets/images/hamburger.jpg') ;
-    background-repeat:no-repeat;
+    background: url("../../assets/images/hamburger.jpg");
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
     height: min-content;
-
 }
-.Auth:before{
-    content: '';
+.Auth:before {
+    content: "";
     width: 100%;
     height: 100%;
     position: absolute;
@@ -29,20 +29,17 @@
     border-radius: 10px;
     background: rgba(99, 98, 98, 0.808);
     z-index: -1;
-
 }
-
 
 .Auth form {
     margin-bottom: 20px;
 }
 
-.Auth form div{
+.Auth form div {
     /* margin-bottom: 5px; */
 }
 
-.Auth
-.Input {
+.Auth .Input {
     display: block;
 }
 
@@ -63,10 +60,9 @@
     margin-bottom: 20px;
     width: max-content;
     font-weight: bold;
-    font-family: 'ChakraPetch-SemiBold';
+    font-family: "ChakraPetch-SemiBold";
     font-size: 1.5rem;
     color: white;
-
 }
 .Auth input {
     border-radius: 20px;
@@ -79,14 +75,12 @@
 } */
 
 .Swipe {
-    
     transition: all 0.3s ease-in-out;
     transform: rotateY(360deg);
 }
 
-
 .Auth a {
-    
-        color: rgb(255, 255, 255);
+    color: rgb(255, 255, 255);
     font-weight: bold;
+    outline: none;
 }
