--- a/client/src/containers/Auth/Auth.module.css
+++ b/client/src/containers/Auth/Auth.module.css
@@ -11,7 +11,7 @@
     border-radius: 10px;
     position: relative;
     z-index: 1;
-    padding: 70px 60px;
+    padding: 30px 60px 70px 60px;
     background: url("../../assets/images/hamburger.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -82,4 +82,9 @@
     color: rgb(255, 255, 255);
     font-weight: bold;
     outline: none;
+}
+
+.Auth img  {
+    height: 100px;
+    width: 100px;
 }
