--- a/client/src/containers/Checkout/ContactData/ContactData.module.css
+++ b/client/src/containers/Checkout/ContactData/ContactData.module.css
@@ -10,7 +10,7 @@
     top: 10vh;
     right: 20vw;
     position: absolute;
-    background-color: red;
+    background-color: rgb(255, 255, 255);
     padding: 0 0;
     border-radius: 10px;
     min-width: 305px;
@@ -23,7 +23,6 @@
     color: white;
     width: 100%;
     height: 80px;
-    background: yellow;
     margin: 0;
     padding: 0;
     border-radius: 10px 10px 0 0;
@@ -32,16 +31,24 @@
     justify-content: center;
     position: relative;
     z-index: 1;
+
+     background: url('../../../assets/images/burger-table.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-clip: border-box;
 }
 .ContactData h1:before {
     position: absolute;
     content: '';
-    background: green;
+   
+    background: rgba(0, 0, 0, 0.637);
     border-radius: 10px 10px 0 0;
     width: 100%;
     height: 100%;
     top: 0;
     left: 0;
+    z-index: -1;
 }
 
 .ContactData div {
@@ -57,5 +64,6 @@
 
 .ContactData input, .ContactData select {
     border-radius: 25px;
+    color: black;
 }
 
