--- a/client/src/containers/Checkout/ContactData/ContactData.module.css
+++ b/client/src/containers/Checkout/ContactData/ContactData.module.css
@@ -17,10 +17,17 @@
     box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.24),
         0 17px 50px 0 rgba(0, 0, 0, 0.19);
 
+    max-width: 500px;
+}
+.ContactData div div {
+    margin: 0;
+    padding: 0;
 }
 
 .ContactData h1 {
-    color: white;
+    font-family: "ChakraPetch-SemiBold";
+    font-weight: ;
+    color: rgb(255, 255, 255);
     width: 100%;
     height: 80px;
     margin: 0;
@@ -32,7 +39,7 @@
     position: relative;
     z-index: 1;
 
-     background: url('../../../assets/images/burger-table.jpg');
+    background: url("../../../assets/images/burger-table.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -40,8 +47,8 @@
 }
 .ContactData h1:before {
     position: absolute;
-    content: '';
-   
+    content: "";
+
     background: rgba(0, 0, 0, 0.637);
     border-radius: 10px 10px 0 0;
     width: 100%;
@@ -52,18 +59,50 @@
 }
 
 .ContactData div {
-    padding: 20px 20px;
+    padding: 0px 20px;
+    display: flex;
+    flex-direction: column;
 }
 
-
-.Input  {
+/* .Input  {
     display: block;
     
-}
+} */
 
-
-.ContactData input, .ContactData select {
+.ContactData input,
+.ContactData select {
     border-radius: 25px;
     color: black;
+    position: relative;
+    /* width: 100%; */
+    background: rgb(236, 236, 236);
+}
+.ContactData input:after {
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+    height: 15px;
+    width: 15px;
+    color: black;
+    background: green;
 }
 
+.ContactData input, .ContactData select {
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.288);
+}
+
+.ContactData label {
+    padding-left: 15px;
+    text-align: left;
+    font-weight: bold;
+    font-style: italic;
+    font-family: "ChakraPetch-SemiBold";
+    text-transform: uppercase;
+    font-size: 0.8rem;
+    color: #ff7000;
+}
+
+.ContactData .InputContainer {
+    margin-top: 30px;
+}
