--- a/client/src/containers/Orders/Orders.module.css
+++ b/client/src/containers/Orders/Orders.module.css
@@ -4,6 +4,9 @@
   text-align: center;
   margin: auto;
   padding: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .Orders {
