--- a/client/src/components/Order/Order.module.css
+++ b/client/src/components/Order/Order.module.css
@@ -1,30 +1,24 @@
 .Order {
   width: 100px;
   /* border: 1px solid #eee; */
-  /* box-shadow: 0 2px 3px; */
+  box-shadow: 02px 2px 10px black;
   /* padding: 10px; */
   border-radius: 10px;
   margin: 10px auto;
   box-sizing: border-box;
   background: white;
   width: 50vw;
-  min-height: 60px
-
-}
-
-
-.Order .Folded {
-  position: relative;
-  width: 100%;
-  background: rgb(214, 214, 214);
-  border-radius: 0 0  10px 10px;
+  min-height: 50px;
   display: inline-block;
-  transition: all 0.3s ease-out, border-radius 0s;
-  z-index: 5;
+  transition: max-height 0.5s linear;
+  max-height: 0;
+  overflow: hidden;
+
 }
 
-.DisplayNone {
-  display: none;
+
+
+.Def {
+  transition: max-height 0.5s linear;
+  max-height: 200px;
 }
-
-
