--- a/client/src/components/Order/Order.module.css
+++ b/client/src/components/Order/Order.module.css
@@ -5,12 +5,12 @@
   /* padding: 10px; */
   border-radius: 10px;
   margin: 10px auto;
-  box-sizing: border-box;
+  box-sizing: content-box;
   background: white;
   width: 50vw;
   min-height: 50px;
   display: inline-block;
-  transition: max-height 0.5s linear;
+  transition: max-height 0.5s ease-in;
   max-height: 0;
   overflow: hidden;
 
@@ -20,7 +20,7 @@
 
 .Def {
   transition: max-height 0.5s linear;
-  max-height: 300px;
+  max-height: 250px;
 }
 
 .Expand {
