--- a/client/src/components/Order/Order.module.css
+++ b/client/src/components/Order/Order.module.css
@@ -27,8 +27,7 @@
   background-color: rgb(221, 221, 221);
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-around;
 }
 
 @media (max-width: 495px) {
