--- a/client/src/components/Order/CheckoutForm/CheckoutForm.module.css
+++ b/client/src/components/Order/CheckoutForm/CheckoutForm.module.css
@@ -1,32 +1,30 @@
 .CheckoutForm {
-  background-color: white;
-  width: 300px;
-  height: auto;
-  border: 1px black thin;
-  border-radius: 3%;
-  -webkit-box-shadow: 0px 0px 47px 9px rgba(0, 0, 0, 0.39);
-  -moz-box-shadow: 0px 0px 47px 9px rgba(0, 0, 0, 0.39);
-  box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.39);
+    background-color: white;
+    width: 300px;
+    height: auto;
+    border: 1px black thin;
+    border-radius: 3%;
+    -webkit-box-shadow: 0px 0px 47px 9px rgba(0, 0, 0, 0.39);
+    -moz-box-shadow: 0px 0px 47px 9px rgba(0, 0, 0, 0.39);
+    box-shadow: 0px 0px 10px 1px rgba(0, 0, 0, 0.39);
 }
 .CheckoutForm .Row {
-  display: flex;
-  flex-direction: row;
-  padding: 8px;
-  text-align: left;
-  font-size: 1.2rem;
-  font-style: italic;
+    display: flex;
+    flex-direction: row;
+    padding: 8px;
+    text-align: left;
+    font-size: 1.2rem;
+    font-style: italic;
 }
 .CheckoutForm .LeftColumn {
-  width: 60%;
+    width: 60%;
 }
 .CheckoutForm .CenterColumn {
-  width: 20%;
+    width: 20%;
 }
 .CheckoutForm .RightColumn {
     width: 20%;
-  }
-
-
+}
 
 .CheckoutForm .TotalRow {
     display: flex;
@@ -38,25 +36,31 @@
     margin-bottom: 7px;
     font-weight: bold;
     font-style: italic;
-
-  }
-  .CheckoutForm .TotalLeftColumn {
+}
+.CheckoutForm .TotalLeftColumn {
     /* background-color: tomato; */
     width: 80%;
-    
-  }
-  .CheckoutForm .TotalRightColumn {
+}
+.CheckoutForm .TotalRightColumn {
     width: 20%;
-  }
-
+}
 
 .CheckoutForm h1 {
     padding: 10px;
-    font-family: 'DancingScript-VariableFont_wght';
-
+    font-family: "DancingScript-VariableFont_wght";
 }
 .CheckoutForm ul {
     list-style: none;
     padding: 0;
     margin: 0;
+}
+
+@media (max-width: 500px) {
+    .CheckoutForm {
+        height: auto;
+        width: 250px;
+        /* margin: 0 auto; */
+    }
+  
+    
 }
