fix nav items border-bottom

--- a/client/src/containers/Checkout/ContactData/ContactData.module.css
+++ b/client/src/containers/Checkout/ContactData/ContactData.module.css
@@ -117,3 +117,12 @@
     display: flex;
 
 }
+
+.ContactData i {
+    color: black;
+    z-index: 1;
+    position: absolute;
+    top: 42%;
+    left: 10px;
+    transform: translateY(-50%);
+}
