--- a/client/src/components/Navigation/Toolbar/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/client/src/components/Navigation/Toolbar/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -2,7 +2,8 @@
     margin: 10px 0;
     box-sizing: border-box;
     display: block;
-    width: 100%;
+    /* width: 100%; */
+
     font-family: 'ChakraPetch-SemiBold';
 
 }
@@ -12,7 +13,7 @@
 .NavigationItem a {
     /* color: #8F5C2C; */
     text-decoration: none;
-    width: 100%;
+    /* width: 100%; */
     box-sizing: border-box;
     display: block;
     color: white; 
