fix orderData responsibility

--- a/client/src/containers/Checkout/ContactData/ContactData.module.css
+++ b/client/src/containers/Checkout/ContactData/ContactData.module.css
@@ -126,3 +126,9 @@
     left: 10px;
     transform: translateY(-50%);
 }
+
+@media (max-width: 500px ){
+    .ContactData {
+        top: 5vh;
+    }
+} 
