--- a/client/src/containers/Checkout/ContactData/ContactData.module.css
+++ b/client/src/containers/Checkout/ContactData/ContactData.module.css
@@ -122,9 +122,13 @@
     color: black;
     z-index: 1;
     position: absolute;
-    top: 42%;
-    left: 10px;
+    top: 50%;
+    left: 13px;
     transform: translateY(-50%);
+}
+
+.ContactData .InputContainer {
+    position: relative;
 }
 
 @media (max-width: 500px ){
