--- a/client/src/containers/Checkout/ContactData/ContactData.module.css
+++ b/client/src/containers/Checkout/ContactData/ContactData.module.css
@@ -131,6 +131,10 @@
     position: relative;
 }
 
+.ContactData .InputContainer:first-child{
+    margin-top: 10px;
+}
+
 @media (max-width: 500px ){
     .ContactData {
         top: 5vh;
