--- a/client/src/components/Navigation/Toolbar/NavigationItems/NavigationItem/NavigationItem.module.css
+++ b/client/src/components/Navigation/Toolbar/NavigationItems/NavigationItem/NavigationItem.module.css
@@ -34,7 +34,7 @@
         align-items: center;
         /* padding-left: 5px; */
         width: 85px;
-        justify-content: flex-end;
+        justify-content: space-around;
     }
     
     .NavigationItem a {
